Cleaned up code formatting